--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,76 @@
 body {
-    padding: 0;
-    margin: 0;
-    background-color: rgb(10, 10, 10);
-    color: rgb(240, 240, 240);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100vw;
-    font-family: Verdana, Tahoma;
+  padding: 0;
+  margin: 0;
+  background-color: rgb(10, 10, 10);
+  color: rgb(240, 240, 240);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  font-family: Verdana, Tahoma;
 }
 
-.avatar {
-   height: 100px;
-   width: 100px;
-}
 
 header {
-    width: 95%;
-    max-width: 788px;
-    display: flex;
-    justify-content: flex-end;
-    padding: 12px;
-    margin-top: 15px;
+  width: 95%;
+  max-width: 788px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 12px;
+  margin-top: 15px;
 }
 
 .share-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: rgb(240, 240, 240);
+}
+
+.container {
+    width: 91%;
+    max-width: 680px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+h1 {
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(240, 240, 240);
+}
+
+.tile {
+    width: 100%;
+    background-color: rgb(37, 37, 37);
+    margin: 7px;
+    border-radius: 17px;
+    display: flex   ;
+    justify-content: space-between;
+}
+
+.title-share-button {
+    margin: 8px;
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(52, 52, 52);
+}
+
+.image-container {
+    height: 96px;
+    width: 96px;
+    border-radius: 48px;
+    overflow: hidden;
+}
+
+.image-container img {
+    height: 100%;
 }
