--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
   font-family: Verdana, Tahoma;
 }
 
-
 header {
   width: 95%;
   max-width: 788px;
@@ -27,50 +26,66 @@ header {
   background-color: rgb(240, 240, 240);
 }
 
-.container {
-    width: 91%;
-    max-width: 680px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.share-button svg {
+  margin-left: 12px;
+  margin: 10px;
 }
 
+.container {
+  width: 91%;
+  max-width: 680px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 h1 {
-    font-size: 20px;
-    margin-bottom: 30px;
+  font-size: 20px;
+  margin-bottom: 30px;
 }
 
 a {
-    text-decoration: none;
-    color: rgb(240, 240, 240);
+  text-decoration: none;
+  color: rgb(240, 240, 240);
 }
 
 .tile {
-    width: 100%;
-    background-color: rgb(37, 37, 37);
-    margin: 7px;
-    border-radius: 17px;
-    display: flex   ;
-    justify-content: space-between;
+  width: 100%;
+  background-color: rgb(37, 37, 37);
+  margin: 7px;
+  border-radius: 17px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .title-share-button {
-    margin: 8px;
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: rgb(52, 52, 52);
+  margin: 8px;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: rgb(52, 52, 52);
+}
+
+.title-share-button svg {
+  margin-left: 12px;
+  margin-top: 10px;
+  color: rgb(255, 255, 255);
 }
 
 .image-container {
-    height: 96px;
-    width: 96px;
-    border-radius: 48px;
-    overflow: hidden;
+  height: 96px;
+  width: 96px;
+  border-radius: 48px;
+  overflow: hidden;
 }
 
 .image-container img {
-    height: 100%;
+  height: 100%;
+}
+
+.icon {
+  margin: 4px 8px;
+  width: 44px;
+  height: 44px;
 }
