--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,11 @@ a {
   justify-content: space-between;
 }
 
+.tile:hover {
+    transition: cubic-bezier(.07, 1.41, .82, 1.41) 0.2s;
+    transform: scale(1.02);
+}
+
 .title-share-button {
   margin: 8px;
   width: 40px;
